# WAF

./: README.md
WAF executable files/client/: client
WAF executable files/client/WAF/: Main  conf.txt
WAF executable files/server/: usersInfo
WAF executable files/server/logs/: Dani1234Log.txt  eyal99001Log.txt
client/: CMakeLists.txt  DB.cpp  DB.h  README.md  client.cpp  client.h  config.cpp  config.h  config.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.cpp  signupscreen.cpp  signupscreen.h  signupscreen.ui  socket.cpp  socket.h  userinterface.cpp  userinterface.h  userinterface.ui
client/WAF/: Main.cpp  README.md  conf.txt  databaseFile  sqlInjectionRules.txt
client/WAF/cppFiles/: DB.cpp  Log.cpp  client.cpp  confing.cpp  ipHeader.cpp  libnetfilterQueueBasics.cpp  packet.cpp  protocol.cpp  socket.cpp  tcpHeader.cpp  userPacketsNumber.cpp
client/WAF/headerFiles/: DB.h  Log.h  client.h  confing.h  ipHeader.h  libnetfilterQueueBasics.h  packet.h  protocol.h  socket.h  tcpHeader.h  userPacketsNumber.h
server/: DB.cpp  DB.h  README.md  Server.cpp  Server.h  main  main.cpp  protocol.cpp  protocol.h  usersInfo
